refactor(proto): set public user profile in all public services, to maintain privacy (#50)
* refactor(proto): set public user profile in all services, to maintain privacy

Additionally for better documentation, add annotations for required fielkds

* chore(buf): generate

* chore(proto): format

* refactor(trade/leaderboard): use PublicProfile in trade/leaderboard services

* rename(domain): LeaderboardResponse -> Leaderboard

It helps better differenatiate dtos from domain structs
